docs: Swagger con seguridad Sanctum, ver y crear planeta
